--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,9 @@ head
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
   meta(name="viewport" content="width=device-width, initial-scale=1.0")
   title Blog Website
+  //link(rel="stylesheet", href="./public/css/main.css")
+  style 
+    include ../public/css/main.css
 
 body
   header.header 
