--- a/views/post.pug
+++ b/views/post.pug
@@ -1,4 +1,6 @@
 extends layout 
 block content 
   h1 #{post.title}
+  h3 #{post.slug}
   p #{post.content}
+  a.go-home-page-button(href="/") Go Home Page
