Some npm packages updated.

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,4 +1,5 @@
 extends layout 
 block content 
-  h1 Contact
-  p #{contactContent}
+  div.container
+    h1.heading-primary Contact
+    p.paragraph-primary #{contactContent}
