--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,5 +22,10 @@ body
   block content
 
   footer.footer 
-    div.footer-text 
-      p Made with ❤️ by #[strong Osman Nuri Erdogan]
+    //div.footer-text 
+    p Made with ❤️ by #[strong Osman Nuri Erdogan]
+
+
+
+
+    
