--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,134 @@
-/* html{
+@import url("https://fonts.googleapis.com/css2?family=Calligraffitti&family=Cookie&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato&family=Merriweather&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@400;700&family=Pacifico&family=Poppins&family=Roboto&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&family=Ubuntu&display=swap");
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+html {
   font-size: 62.5%;
+  font-family: "Montserrat", sans-serif;
 }
-.container{
-  max-width: 120rem;
+
+.heading-primary {
+  font-size: 3.2rem;
 }
-.card-container{
+
+.paragraph-primary {
+  font-size: 1.6rem;
+}
+
+.heading-secondary {
+  font-size: 2.4rem;
+}
+
+.paragraph-secondary {
+  font-size: 1.4rem;
+}
+
+.read-more {
+  font-size: 1.8rem;
+}
+
+.read-more:link, .read-more:visited {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: #149077;
+}
+
+.read-more:hover, .read-more:active {
+  color: #1abc9c;
+}
+
+.go-home-page-button {
+  font-size: 1.8rem;
+}
+
+.go-home-page-button:link, .go-home-page-button:visited {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: #149077;
+}
+
+.go-home-page-button:hover, .go-home-page-button:active {
+  color: #1abc9c;
+}
+
+.header {
+  width: 100%;
+}
+
+.nav {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.nav-list {
+  background-color: #bc631a;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  padding: 3rem;
 }
-.card{
+
+.nav-list-item a:link,
+.nav-list-item a:visited {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: white;
+}
+
+.nav-list-item a:hover,
+.nav-list-item a:active {
+  color: #a7a5a5;
+}
+
+.container {
+  padding: 5% 15%;
+}
+
+.card-container {
+  padding-left: 15%;
+  padding-right: 15%;
+  margin-bottom: 10rem;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin: 5% 10%;
-} */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.2rem;
+}
+
+.footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 6rem;
+  background-color: #1abc9c;
+}
+
+.footer p {
+  margin-top: 2.5rem;
+  font-size: 1.5rem;
+  color: white;
+}
