--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,15 +1,130 @@
-/* html{
-  font-size: 62.5%;
+@import url("https://fonts.googleapis.com/css2?family=Calligraffitti&family=Cookie&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato&family=Merriweather&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@400;700&family=Pacifico&family=Poppins&family=Roboto&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&family=Ubuntu&display=swap");
+
+$calligraffitti-font-family: "Calligraffitti", cursive;
+$cookie-font-family: "Cookie", cursive;
+$inter-font-family: "Inter", sans-serif;
+$lato-font-family: "Lato", sans-serif;
+$merriweather-font-family: "Merriweather", serif;
+$montserrat-font-family: "Montserrat", sans-serif;
+$outfit-font-family: "Outfit", sans-serif;
+$pacifico-font-family: "Pacifico", cursive;
+$poppins-font-family: "Poppins", sans-serif;
+$roboto-font-family: "Roboto", sans-serif;
+$rubik-font-family: "Rubik", sans-serif;
+$satisfy-font-family: "Satisfy", cursive;
+$ubuntu-font-family: "Ubuntu", sans-serif;
+
+$color-primary: hsl(168, 76%, 42%);
+$color-primary-dark-1: hsl(168, 76%, 32%);
+$color-white: hsl(0, 0%, 100%);
+$color-header: hsl(27, 76%, 42%);
+$color-grayish: hsl(0, 1%, 65%);
+
+$section-padding: 5% 15%;
+
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
 }
-.container{
-  max-width: 120rem;
+html {
+	font-size: 62.5%;
+	font-family: $montserrat-font-family;
 }
-.card-container{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+.heading-primary {
+	font-size: 3.2rem;
 }
-.card{
-  display: flex;
-  margin: 5% 10%;
-} */
+.paragraph-primary {
+	font-size: 1.6rem;
+}
+.heading-secondary {
+	font-size: 2.4rem;
+}
+.paragraph-secondary {
+	font-size: 1.4rem;
+}
+.read-more {
+	font-size: 1.8rem;
+	&:link,
+	&:visited {
+		transition: all 0.3s;
+		color: $color-primary-dark-1;
+	}
+	&:hover,
+	&:active {
+		color: $color-primary;
+	}
+}
+.go-home-page-button {
+	font-size: 1.8rem;
+	&:link,
+	&:visited {
+		transition: all 0.3s;
+		color: $color-primary-dark-1;
+	}
+	&:hover,
+	&:active {
+		color: $color-primary;
+	}
+}
+
+.header {
+	width: 100%;
+}
+.nav {
+	font-size: 2rem;
+	font-weight: bold;
+	&-list {
+		background-color: $color-header;
+		height: fit-content;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		gap: 2rem;
+		padding: 3rem;
+		&-item {
+			& a:link,
+			& a:visited {
+				transition: all 0.3s;
+				color: $color-white;
+			}
+			& a:hover,
+			& a:active {
+				color: $color-grayish;
+			}
+		}
+	}
+}
+.container {
+	padding: $section-padding;
+}
+.card-container {
+	padding-left: 15%;
+	padding-right: 15%;
+	margin-bottom: 10rem;
+}
+.card {
+	display: flex;
+	flex-direction: column;
+	gap: 1.2rem;
+}
+.footer {
+	position: fixed;
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 6rem;
+	//padding-bottom: 6rem;
+	background-color: $color-primary;
+}
+
+.footer p {
+	margin-top: 2.5rem;
+	font-size: 1.5rem;
+	color: $color-white;
+}
