--- a/views/about.pug
+++ b/views/about.pug
@@ -1,4 +1,5 @@
 extends layout 
 block content 
-  h1 About
-  p #{aboutContent}
+  div.container
+    h1.heading-primary About
+    p.paragraph-primary #{aboutContent}
