--- a/views/post.pug
+++ b/views/post.pug
@@ -1,6 +1,7 @@
 extends layout 
 block content 
-  h1 #{post.title}
-  h3 #{post.slug}
-  p #{post.content}
-  a.go-home-page-button(href="/") Go Home Page
+  div.container
+    h1.heading-primary #{post.title}
+    h3.heading-secondary #{post.slug}
+    p.paragraph-secondary #{post.content}
+    a.go-home-page-button(href="/") Go Home Page
